--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ body{
     height: 95vh;
     background-image: linear-gradient(
             to right bottom,
-            rgba(126, 213, 111, 0.8),
-            rgba(40, 180, 133, 0.8)),
+            rgba(126, 213, 111, 0.9),
+            rgba(40, 180, 133, 0.9)),
     url(../img/229368.jpg);
     background-size: cover;
     background-position: top;
@@ -35,24 +35,120 @@ body{
 }
 .text-box{
     position: absolute;
-    top :30%;
+    top :10%;
     left: 50%;
     transform: translate(-50%, 50%);
+    text-align: center;
 }
 .heading-primary{
     color:#fff;
-    text-transform:uppercase ;
+    text-transform:uppercase;
+    margin-bottom: 60px;
 }
 .heading-primary-main{
     display: block;
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+    animation-name: motionInleft;
+    animation-duration: 2s;
+    animation-timing-function: ease-out ;
+    /*animation-iteration-count: 3;*/
 }
 .heading-primary-sub{
     display:block;
     font-size:20px ;
     font-weight:700;
     letter-spacing:17px;
+    animation-name:motionInright;
+    animation-duration: 2s;
+}
+@keyframes motionInleft {
+    0%{
+        opacity: 0;
+        transform: translate(-40%);
+    }
+    80%{
+        transform : translateX(10px);
+    }
+    100%{
+        opacity:1;
+        transform:translate(0);
+    }
 }
 
+@keyframes motionInright {
+    0%{
+        opacity: 0;
+        transform: translate(40%);
+    }
+    80%{
+        transform : translateX(10px);
+    }
+    100%{
+        opacity:1;
+        transform:translate(0);
+    }
+}
+
+@keyframes motionInBottom {
+    0%{
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    100%{
+        opacity:1;
+        transform:translate(0);
+    }
+}
+/*p
+/*psudoclass */
+
+.btn:link,
+.btn:visited{
+    position:relative;
+    text-transform: uppercase;
+     text-decoration: none;
+     padding: 15px 40px;
+     display: inline-block;
+     border-radius: 100px;
+     transition: all .2s;
+ }
+.btn:hover{
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,.2);
+}
+.btn:active{
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    /* x y blur color*/
+}
+.btn-white{
+    background-color: #fff;
+    color: #777;
+}
+
+.btn::after{
+    content:"";
+    position: absolute;
+    display: inline-block;
+    height: 100%;
+    width : 100%;
+    border-radius: 100px;
+    top:0;
+    left:0;
+    z-index:-1;
+    transition: all .4s;
+
+}
+.btn-white::after{
+    background-color: white;
+}
+.btn:hover::after{
+    transform: scale(1.5);
+    opacity: 0;
+}
+.btn-animated{
+    animation: motionInBottom .5s ease-out .75s;
+    animation-fill-mode: backwards;
+}
